namespaces/live.cloud-platform.service.justice.gov.uk/cjs-feedback-service-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cjs-feedback-service-development"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cjs-data-dashboard"
    cloud-platform.justice.gov.uk/application: "CJS Feedback Service"
    cloud-platform.justice.gov.uk/owner: "cjs-dashboard: cjs.data.dashboard@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cjs-feedback-service"
    cloud-platform.justice.gov.uk/team-name: "cjs-dashboard"
    cloud-platform.justice.gov.uk/review-after: ""
